--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1.0.96"
 image = "0.25.5"
 imageproc = "0.25.0"
 ab_glyph = "0.2.29"
+rgb = "0.8.50"
 
 [dev-dependencies]
 tempfile = "3.17.1"
