--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "xyplot"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 authors = ["Balazs Horvath"]
 description = "A tool for plotting images in a grid with labels"
+license = "MIT"
+repository = "https://github.com/rakki194/xyplot"
 
 [dependencies]
 xio = "0.1.7"
